tests/snapshots/run_wpt_conformance__coreml_reduceL2_float16_3D_tensor_options_keepDimensions_false.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_l2.https.any.js",
    "reduceL2 float16 3D tensor options.keepDimensions=false",
    "coreml",
    "PASS",
)
