tests/snapshots/run_wpt_conformance__coreml_reduceL2_float16_4D_tensor_options_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_l2.https.any.js",
    "reduceL2 float16 4D tensor options.axes",
    "coreml",
    "PASS",
)
