tests/snapshots/run_wpt_conformance__coreml_reduceL2_float32_0D_constant_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_l2.https.any.js reduceL2 float32 0D constant tensor default options, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type reduce_l2_norm: Param 'x' has incorrect type for operator 'ios16.reduce_l2_norm'. Expected { ...]>, ...]>, ...]>, [?, [?, [?, tensor<fp16, tensor<fp32, tensor<int32 }; got fp32.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[] @bytes([253, 134, 155, 64]);
  }

  nodes {
    [reduceL2Output] = reduceL2(operand_0, axes=null, keepDimensions=false, label="");
  }

  outputs { reduceL2Output; }
}
